Aterações do site- matrícula:885995

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Currículo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-</body>
-</html>
+    <section>
+        <img id="imagem" src="download.jpeg" alt="">
+        <h1>Francisco Sacchetto Andrade</h1>
+        <table id="t1" align="center">
+            <th>Informações Pessoais</th>
+            <tr>
+                <td>Sexo:Masculino</td>
+            </tr>
+            <tr>
+                <td>Idade:17 Anos</td>
+            </tr>
+            <tr>
+                <td>Status:Solteiro</td>
+            </tr>
+            <tr>
+                <td>CPF:128878339-87</td>
+            </tr>
+        </table>
+        <table id="t2" align="center">
+            <th>Informações de Contato</th>
+            <tr>
+                <td>Telefone:31-999275598</td>
+            </tr>
+            <tr>
+                <td>Email:franciscosacchettoandrade@gmail.com</td>
+            </tr>
+            <tr>
+                <td>MG-Belo Horizonte</td>
+            </tr>
+            <tr>
+                <td>Endereço:Rua Professor Otaviano Marques 935</td>
+            </tr>
+        </table>
+    </section>
+    <article>
+        <h2>Experiência em Programação</h2>
+
+        <p>Experiência em robótica (arduino) e programação com Scratch e Unity (focado na criação de jogos)</p>
+        <p>Experiência em Pyton por eletiva em 2024 (básico)</p>
+
+        <h3>Línguas</h3>
+
+        <p>Diploma em Espanhol nivel B2</p>
+        <p>Inglês básico avançado</p>
+    </article>
